--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.soundcloud.android:android-crop:1.0.1'
 
+    def glide_version = '4.14.2'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    def lottie_version = "3.2.2"
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
 }
